--- a/Linguagem de Programação II/utils/projeto-4/utils/style.css
+++ b/Linguagem de Programação II/utils/projeto-4/utils/style.css
@@ -8,8 +8,8 @@ body{
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7); /* Cor semi-transparente preta com 30% de transparência */
-    z-index: 1040; /* Z-index deve ser maior que o z-index do modal */
+    background-color: rgba(0, 0, 0, 0.7);
+    z-index: 1040;
 }
 
 .btn-secondary {
